@@ -183,7 +183,7 @@ abstract public class BaseDataStreamMarshaller implements DataStreamMarshaller {
                                 tightUnmarshalString(dataIn, bs),
                                 tightUnmarshalString(dataIn, bs), 
                                 tightUnmarshalString(dataIn, bs), 
-                                new Integer(dataIn.readInt())
+                                Integer.valueOf(dataIn.readInt())
                                 });
                         } catch (IOException e) {
                             throw e;
@@ -484,7 +484,7 @@ abstract public class BaseDataStreamMarshaller implements DataStreamMarshaller {
                                 looseUnmarshalString(dataIn),
                                 looseUnmarshalString(dataIn), 
                                 looseUnmarshalString(dataIn), 
-                                new Integer(dataIn.readInt())
+                                Integer.valueOf(dataIn.readInt())
                                 });
                         } catch (IOException e) {
                             throw e;
