@@ -133,8 +133,8 @@ public class LDAPAuthorizationMap implements AuthorizationMap {
         String queueSearchSubtree = (String) options.get(QUEUE_SEARCH_SUBTREE);
         topicSearchMatchingFormat = new MessageFormat(topicSearchMatching);
         queueSearchMatchingFormat = new MessageFormat(queueSearchMatching);
-        topicSearchSubtreeBool = new Boolean(topicSearchSubtree).booleanValue();
-        queueSearchSubtreeBool = new Boolean(queueSearchSubtree).booleanValue();
+        topicSearchSubtreeBool = Boolean.valueOf(topicSearchSubtree).booleanValue();
+        queueSearchSubtreeBool = Boolean.valueOf(queueSearchSubtree).booleanValue();
     }
 
     public Set getTempDestinationAdminACLs() {
